@@ -5,12 +5,14 @@
     <parent>
         <artifactId>maven-confluence-parent</artifactId>
         <groupId>org.bsc.maven</groupId>
-        <version>6.20</version>
+        <version>7.0-beta1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>maven-confluence-core</artifactId>
     <name>CONFLUENCE-REPORTING::Core</name>
+    <description>maven confluence plugin - core project</description>
+    <url>http://code.google.com/p/maven-confluence-plugin/</url>
 
     <scm>
         <connection>scm:git:https://github.com/bsorrentino/maven-confluence-reporting-plugin.git</connection>
@@ -20,8 +22,6 @@
         <tag>HEAD</tag>
     </scm>
 
-    <description>maven confluence plugin - core project</description>
-    <url>http://code.google.com/p/maven-confluence-plugin/</url>
     <developers>
         <developer>
             <id>bsorrentino</id>
@@ -37,7 +37,7 @@
     </licenses>
 
     <properties>
-        <jackson.version>2.11.0</jackson.version>
+        <jackson.version>2.12.0</jackson.version>
     </properties>
 
     <dependencies>
@@ -86,6 +86,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.version}</version>
         </dependency>
 
@@ -156,28 +162,79 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>compile-java-8</id>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
+                            </compileSourceRoots>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>compile-java-9</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <release>9</release>
+                            <compileSourceRoots>
+                                <compileSourceRoot>${project.basedir}/src/main/java</compileSourceRoot>
+                                <compileSourceRoot>${project.basedir}/src/main/java9</compileSourceRoot>
+                            </compileSourceRoots>
+                            <compilerArgs>
+                                <arg>--add-modules=java.xml.bind</arg>
+                            </compilerArgs>
+                            <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Multi-Release>true</Multi-Release>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+
         </plugins>
 
     </build>
 
-    <dependencyManagement>
-        <dependencies>
-        </dependencies>
-    </dependencyManagement>
-
     <profiles>
 
         <profile>
-            <id>java11</id>
+            <id>java9above</id>
             <activation>
-                <jdk>11</jdk>
+                <jdk>[9,)</jdk><!-- java9 and above -->
             </activation>
 
             <dependencies>
+
+                <dependency>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                    <version>2.3.3</version>
+                </dependency>
+
+                <!--
                 <dependency>
                     <groupId>javax.xml.bind</groupId>
                     <artifactId>jaxb-api</artifactId>
                     <version>2.3.1</version>
+                    <scope>runtime</scope>
                 </dependency>
                 <dependency>
                     <groupId>com.sun.xml.bind</groupId>
@@ -194,13 +251,21 @@
                     <artifactId>activation</artifactId>
                     <version>1.1.1</version>
                 </dependency>
+                -->
+                <!--
+                <dependency>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-runtime</artifactId>
+                    <version>2.3.3</version>
+                    <scope>runtime</scope>
+                </dependency>
+                -->
             </dependencies>
         </profile>
         <profile>
             <id>utest</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
-                <!--jdk>11</jdk-->
             </activation>
             <build>
                 <plugins>
